add new website from server na

--- a/xem-phim-moi/canh-bao-dap-tra/index.html
+++ b/xem-phim-moi/canh-bao-dap-tra/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1777,62 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phat-ngoc-yen" title="Phất Ngọc Yên">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-ve-nu-tu-si" title="Chuyện Về Nữ Tu Sĩ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phat-ngoc-yen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-ve-nu-tu-si-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phất Ngọc Yên
+             Chuyện Về Nữ Tu Sĩ
             </span>
             <span class="list-top-movie-item-en">
-             The Unexpected Marriage
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-ngan-hoa" title="Bỉ Ngạn Hoa">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-ngan-hoa-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bỉ Ngạn Hoa
-            </span>
-            <span class="list-top-movie-item-en">
-             Beautiful Reborn Flower
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/red-dot" title="Red Dot">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/red-dot-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Red Dot
-            </span>
-            <span class="list-top-movie-item-en">
-             Red Dot
+             Story of a Cloistered Nun
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1843,18 +1799,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-an-mc2-phan-5" title="Dự án Mc2 (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/hai-do-va-bay-chu-lun" title="Hài đỏ và bảy chú lùn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-an-mc2-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-do-va-bay-chu-lun-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dự án Mc2 (Phần 5)
+             Hài đỏ và bảy chú lùn
             </span>
             <span class="list-top-movie-item-en">
-             Project Mc2 (Season 5)
+             레드슈즈
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thap-nhi-dai-chien" title="Thập Nhị Đại Chiến">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thap-nhi-dai-chien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thập Nhị Đại Chiến
+            </span>
+            <span class="list-top-movie-item-en">
+             Juni Taisen: Zodiac War
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1865,21 +1843,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ainbo-nu-chien-binh-amazon" title="Ainbo: Nữ Chiến Binh Amazon">
+          <a class="list-top-movie-link" href="/phim-moi/anh-trang-khong-hieu-long-toi" title="Ánh Trăng Không Hiểu Lòng Tôi">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ainbo-nu-chien-binh-amazon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-trang-khong-hieu-long-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ainbo: Nữ Chiến Binh Amazon
+             Ánh Trăng Không Hiểu Lòng Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Ainbo: Spirit of the Amazon
+             Love under the Moon
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             7 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tien-chuoc-den" title="Tiền Chuộc Đen">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-chuoc-den-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tiền Chuộc Đen
+            </span>
+            <span class="list-top-movie-item-en">
+             Black Ransom
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
