add new website from server na

--- a/xem-phim-moi/sat-thu-gia-vo/index.html
+++ b/xem-phim-moi/sat-thu-gia-vo/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1760,7 +1760,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1781,18 +1781,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kung-fu-yoga" title="Kung Fu Yoga">
+          <a class="list-top-movie-link" href="/phim-moi/my-dear-enemy" title="My Dear Enemy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kung-fu-yoga-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-dear-enemy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kung Fu Yoga
+             My Dear Enemy
             </span>
             <span class="list-top-movie-item-en">
-             Kung Fu Yoga
+             My Dear Enemy
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-tu-peoria-phan-2" title="Hoàng tử Peoria (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-tu-peoria-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hoàng tử Peoria (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Prince of Peoria (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1803,21 +1825,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/an-mang-noi-tan-cung-the-gioi" title="Án mạng nơi Tận cùng Thế giới">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-con-khi-bay-tinh-nghich" title="Những con khỉ bay tinh nghịch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-murder-at-the-end-of-the-world-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-khi-bay-tinh-nghich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Án mạng nơi Tận cùng Thế giới
+             Những con khỉ bay tinh nghịch
             </span>
             <span class="list-top-movie-item-en">
-             A Murder at the End of the World
+             Wicked Flying Monkeys
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1825,18 +1847,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-thu-dang-quy" title="Kẻ Thù Đáng Quý">
+          <a class="list-top-movie-link" href="/phim-moi/motley-crue-ban-nhac-tai-tieng" title="Mötley Crüe: Ban nhạc tai tiếng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-thu-dang-quy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/motley-crue-ban-nhac-tai-tieng-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ Thù Đáng Quý
+             Mötley Crüe: Ban nhạc tai tiếng
             </span>
             <span class="list-top-movie-item-en">
-             The Best of Enemies
+             The Dirt
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1847,43 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/i-am-bruce-lee" title="I Am Bruce Lee">
+          <a class="list-top-movie-link" href="/phim-moi/bong-toi-trong-mat-toi" title="Bóng tối trong mắt tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/i-am-bruce-lee-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-toi-trong-mat-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             I Am Bruce Lee
+             Bóng tối trong mắt tôi
             </span>
             <span class="list-top-movie-item-en">
-             I Am Bruce Lee
+             The Bombardment
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/elektra" title="Elektra">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/elektra-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Elektra
-            </span>
-            <span class="list-top-movie-item-en">
-             Elektra
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
