add new website from server na

--- a/xem-phim-moi/sat-thu-gia-vo/index.html
+++ b/xem-phim-moi/sat-thu-gia-vo/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1781,84 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-dear-enemy" title="My Dear Enemy">
+          <a class="list-top-movie-link" href="/phim-moi/mo-lai-so-thu" title="Mở Lại Sở Thú">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-dear-enemy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mo-lai-so-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             My Dear Enemy
+             Mở Lại Sở Thú
             </span>
             <span class="list-top-movie-item-en">
-             My Dear Enemy
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoang-tu-peoria-phan-2" title="Hoàng tử Peoria (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-tu-peoria-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hoàng tử Peoria (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Prince of Peoria (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-con-khi-bay-tinh-nghich" title="Những con khỉ bay tinh nghịch">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-khi-bay-tinh-nghich-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những con khỉ bay tinh nghịch
-            </span>
-            <span class="list-top-movie-item-en">
-             Wicked Flying Monkeys
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/motley-crue-ban-nhac-tai-tieng" title="Mötley Crüe: Ban nhạc tai tiếng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/motley-crue-ban-nhac-tai-tieng-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mötley Crüe: Ban nhạc tai tiếng
-            </span>
-            <span class="list-top-movie-item-en">
-             The Dirt
+             We Bought a Zoo
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1869,21 +1803,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bong-toi-trong-mat-toi" title="Bóng tối trong mắt tôi">
+          <a class="list-top-movie-link" href="/phim-moi/cam-tavanlar" title="Cam Tavanlar">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-toi-trong-mat-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tavanlar-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bóng tối trong mắt tôi
+             Cam Tavanlar
             </span>
             <span class="list-top-movie-item-en">
-             The Bombardment
+             Glass Ceilings
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-bat-tu-suoi-nguon" title="Người Bất Tử (Suối Nguồn)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-bat-tu-suoi-nguon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Bất Tử (Suối Nguồn)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Fountain
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-ban-gai-lai-them-ban-gai-mua-2" title="Có bạn gái, lại thêm bạn gái mùa 2">
+           <span class="status">
+            Vietsub - HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-ban-gai-lai-them-ban-gai-mua-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Có bạn gái, lại thêm bạn gái mùa 2
+            </span>
+            <span class="list-top-movie-item-en">
+             カノジョも彼女2期
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/choc-phai-dien-ha-lanh-lung" title="Chọc phải điện hạ lạnh lùng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/choc-phai-dien-ha-lanh-lung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chọc phải điện hạ lạnh lùng
+            </span>
+            <span class="list-top-movie-item-en">
+             Accidentally in Love
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
