add new website from server na

--- a/xem-phim-moi/sat-thu-gia-vo/index.html
+++ b/xem-phim-moi/sat-thu-gia-vo/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1781,18 +1781,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mo-lai-so-thu" title="Mở Lại Sở Thú">
+          <a class="list-top-movie-link" href="/phim-moi/thang-bac-len-troi-nghe-thuat-cua-thai-quoc-cuong" title="Thang bắc lên trời: Nghệ thuật của Thái Quốc Cường">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mo-lai-so-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-bac-len-troi-nghe-thuat-cua-thai-quoc-cuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mở Lại Sở Thú
+             Thang bắc lên trời: Nghệ thuật của Thái Quốc Cường
             </span>
             <span class="list-top-movie-item-en">
-             We Bought a Zoo
+             Sky Ladder: The Art of Cai Guo-Qiang
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tom-and-jerry-kids-show-1990-phan-2" title="Tom and Jerry Kids Show (1990) (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-and-jerry-kids-show-1990-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tom and Jerry Kids Show (1990) (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Tom and Jerry Kids Show (1990) (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tom-and-jerry-kids-show-1990-phan-1" title="Tom and Jerry Kids Show (1990) (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-and-jerry-kids-show-1990-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tom and Jerry Kids Show (1990) (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Tom and Jerry Kids Show (1990) (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1803,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-tavanlar" title="Cam Tavanlar">
+          <a class="list-top-movie-link" href="/phim-moi/the-power-of-the-dog" title="The Power of the Dog">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tavanlar-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-power-of-the-dog-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cam Tavanlar
+             The Power of the Dog
             </span>
             <span class="list-top-movie-item-en">
-             Glass Ceilings
+             The Power of the Dog
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1825,65 +1869,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-bat-tu-suoi-nguon" title="Người Bất Tử (Suối Nguồn)">
+          <a class="list-top-movie-link" href="/phim-moi/lang-gieng-bi-an" title="Láng giềng bí ẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-bat-tu-suoi-nguon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-gieng-bi-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Bất Tử (Suối Nguồn)
+             Láng giềng bí ẩn
             </span>
             <span class="list-top-movie-item-en">
-             The Fountain
+             Time Share
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-ban-gai-lai-them-ban-gai-mua-2" title="Có bạn gái, lại thêm bạn gái mùa 2">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-ban-gai-lai-them-ban-gai-mua-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Có bạn gái, lại thêm bạn gái mùa 2
-            </span>
-            <span class="list-top-movie-item-en">
-             カノジョも彼女2期
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/choc-phai-dien-ha-lanh-lung" title="Chọc phải điện hạ lạnh lùng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/choc-phai-dien-ha-lanh-lung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chọc phải điện hạ lạnh lùng
-            </span>
-            <span class="list-top-movie-item-en">
-             Accidentally in Love
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
